# apicius

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
apicius/: pyproject.toml
apicius/apicius/: admin.py  apps.py  models.py  queries.py  schema.py  translation.py  types.py  urls.py  views.py
apicius/apicius/migrations/: 0001_initial.py  0004_remove_userreview_user_userreview_author_and_more.py  0005_author_created_at_author_slug_author_updated_at_and_more.py  0006_alter_author_slug_alter_cookingtime_slug_and_more.py
apicius/apicius/templates/apicius/: base.html
apicius/apicius/templates/apicius/partials/: footer.html  logo.html  navbar.html
apicius/apicius/templates/registration/: signin.html
apicius/config/: settings.py  urls.py
apicius/locale/fr/LC_MESSAGES/: django.po
apicius/migrations/: 0002_initial.py  0003_alter_cookingtime_options_alter_ingredient_options_and_more.py
apicius/templates/apicius/: base.html  footer.html  index.html  navbar.html
authuser/migrations/: 0001_initial.py
config/: settings.py  urls.py
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/assets/css/: input.css
frontend/components/: AppFooter.vue  AppHeader.vue  AppLogo.vue  ColorSchemeBtn.vue
frontend/pages/: all-categories.vue
locale/en/LC_MESSAGES/: django.po
